# mown-project

./: .gitignore  .gitmodules  README.md  all.launch  architecture.md  launcher.sh  package.xml  readme.md  run_all.sh  useful_info.md
all/: dev_first_run.sh  dev_start.sh  docker_test.sh  docker_test_first_run.sh  docker_test_start.sh  run_all.sh  run_cmd.sh  run_webviz.sh
all_jetson/: dev_full_build.sh  dev_run.sh  docker_jetson  try_build.sh
all_jetson_ml/: run_all.sh  run_this.sh
aparfenov/common/backend/: package.xml
aparfenov/common/backend/src/: backend_node.py  planner_emu.py
aparfenov/engix_robot/engix_control/: package.xml
aparfenov/engix_robot/engix_control/config/: diagnostics.yaml  teleop_logitech.yaml
aparfenov/engix_robot/engix_control/launch/: teleop.launch
aparfenov/engix_robot/engix_navigation/: package.xml
aparfenov/engix_robot/engix_navigation/config/: costmap_common.yaml  costmap_exploration.yaml  costmap_global_laser.yaml  ekf_params.yaml
aparfenov/engix_robot/engix_navigation/config/hasky/: costmap_common.yaml  costmap_exploration.yaml
aparfenov/engix_robot/engix_navigation/config/new/: local_planner.yaml
aparfenov/engix_robot/engix_navigation/config/new/NOT USED/: costmap_global_laser.yaml
aparfenov/engix_robot/engix_navigation/config1/: base_local_planner_params.yaml
aparfenov/engix_robot/engix_navigation/config2/: costmap_common.yaml  costmap_exploration.yaml  move_base_params.yaml
aparfenov/engix_robot/engix_navigation/launch/: mapping_default.launch  mapserv_local_dir.launch  pointcloud_2_laserscan.launch
aparfenov/engix_robot/engix_robot/: CMakeLists.txt
aparfenov/engix_robot/engix_robot/config/: 2d_cartographer.lua
aparfenov/engix_robot/engix_robot/nodejs/public/: index.html
aparfenov/engix_robot/engix_robot/nodejs/public/assets/js/: z_rosbot_UI.js
aparfenov/engix_robot/engix_robot/src/: depth_clipping.cpp  odrive_utils.cpp
aparfenov/experiments/try-move-base-flex/pkg1/: CMakeLists.txt  package.xml
aparfenov/experiments/try-move-base-flex/pkg1/scripts/: coverage_progress
aparfenov/planning/engix_planning/: CMakeLists.txt  package.xml
aparfenov/projection/ws/src/projection_node/: CMakeLists.txt
aparfenov/staging/pidnet_py/: package.xml  pidnet_node.py
aparfenov/staging/pidnet_py/src/pidnet/data/list/synth/: test.lst
aparfenov/staging/pidnet_py/src/pidnet/datasets/: __init__.py  synth.py
aparfenov/staging/pidnet_py/src/pidnet/utils/: utils.py
common/my_utils_common/: CMakeLists.txt  package.xml
common/my_utils_common/launch/: all.launch  map.launch  planning.launch
common/my_utils_common/param/: costmap_2d_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_flex_params.yaml  path_tracking_pid.yaml  pidnet_synth_road.yaml  planning_stack_params.yaml  rtabmap_sim.yaml
common/my_utils_common/rviz/: cfg.rviz
common/my_utils_common/src/: map_server.py  polygon_layer_helper.py  tf_base_footprint.py
common/my_utils_common/worlds/: baylands.world  empty.world
dev/src/: gui  (+2 more)
engix/engix_gazebo/: CMakeLists.txt  package.xml
engix_robot/engix_description/: CMakeLists.txt  package.xml
engix_robot/engix_description/launch/: description.launch  gazebo.launch
engix_robot/engix_description/meshes/: caster_left.STL  caster_left_1.stl  lan_1.stl  ultrasound_left_top.STL
engix_robot/engix_description/urdf/: engix.urdf
experiments/try-move-base-flex/layers_my/: CMakeLists.txt
experiments/try-move-base-flex/layers_my/src/: unrolling_layer.cpp
experiments/try-planner-occ/dwa_planner_py/: package.xml
modules/backend/: CMakeLists.txt
modules/backend/src/: backend_node.py  backend_node2.py
modules/core/engix_launch/: package.xml  setup.py
modules/core/engix_launch/launch/: gazebo.launch  global_planner.launch  main.launch  mapping.launch  planning.launch  run_odrive.launch
modules/core/engix_launch/param/: costmap_2d_params.yaml
modules/localization/gazebo_bridge_localization/: CMakeLists.txt  package.xml
modules/localization/gazebo_bridge_localization/params/: config.yaml
modules/localization/gazebo_bridge_localization/scripts/: turtlebot_gps_localization.py  turtlebot_localization.py  turtlebot_tf_localization.py
modules/localization/reach_localization/: CMakeLists.txt
modules/localization/reach_localization/launch/: emlid.launch  reach_rs.launch  test.launch
modules/localization/reach_localization/scripts/: test.py
modules/navigation/navigation_launch/: CMakeLists.txt  package.xml  setup.py
modules/navigation/navigation_launch/launch/: main.launch
modules/segmentation/ddrnet/: package.xml
modules/segmentation/ddrnet/src/: ddrnet_hr.cpp  ddrnet_node.cpp  ddrnet_tool.cpp
modules/simulator/simulator_launch/: CMakeLists.txt  package.xml
modules/simulator/simulator_launch/launch/: gazebo.launch
old/engix_robot/engix_robot/: package.xml
old/engix_robot/engix_robot/launch/: webui.launch
old/engix_robot/engix_robot/nodejs/public/js/: joystick.js
old/engix_robot/engix_robot/scripts/: setup_udev.sh
old/engix_robot/engix_robot/src/: odrive.cpp  odrive_endpoint.cpp  robot_pose_publisher.cpp
old/engix_robot/engix_viz/: package.xml
planning/navigation_my/dwa_planner_py/: CMakeLists.txt
planning/navigation_my/dwa_planner_py/include/dwa_planner_py/: dwa_planner_py.h
segementation/ws/src/segmentation_node/: CMakeLists.txt
segmentation/ddrnet/: CMakeLists.txt
segmentation/ddrnet/launch/: ddr_test.launch
segmentation/ddrnet/src/: ddrnet.cpp  ddrnet_hr.cpp  ddrnet_node.cpp
segmentation/projection/ws/src/projection_node/: package.xml
segmentation/projection/ws/src/projection_node/config/: waffle_robot.yaml
segmentation/projection/ws/src/projection_node/launch/: rviz.launch  segmentation_input.launch
segmentation/projection/ws/src/projection_node/rviz/: cfg.rviz
trajectory_planner/ws/src/move_base_mod/: CMakeLists.txt
trajectory_planner/ws/src/move_base_mod/include/move_base/: move_base_mod.h
trajectory_planner/ws/src/move_base_mod/launch/: move_base.launch
trajectory_planner/ws/src/move_base_mod/src/: move_base_mod.cpp
(+1223 files in other folders)
