<?xml version="1.0"?>
<package>
  <name>engix_gazebo</name>
  <version>0.0.2</version>
  <description>Engix robot Simulator bringup</description>

  <author email="yarulik1986@gmail.com">Litvinov Yaroslav</author>
  <maintainer email="yarulik1986@gmail.com">Litvinov Yaroslav</maintainer>
  
  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>engix_control</run_depend>
  <run_depend>engix_description</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
