<?xml version="1.0"?>
<package>
  <name>engix_description</name>
  <version>0.0.2</version>
  <description>The engix_description package</description>

  <author email="yarulik1986@gmail.com">Litvinov Yaroslav</author>
  <maintainer email="yarulik1986@gmail.com">Litvinov Yaroslav</maintainer>
  
  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
