<package>
  <name>backend</name>
  <version>2.3.7</version>
  <description>commont utils and launch files</description>
  <maintainer email="kantengri3@gmail.com">OSRF</maintainer>
  <license>BSD</license>
  <author>Aleksey Parfenov</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>catkin_simple</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>rospy</run_depend>
  
  <export>

  </export>

</package>
