<?xml version="1.0"?>
<package>
  <name>engix_control</name>
  <version>0.0.2</version>
  <description>Engix robot controller configurations</description>

  <author email="yarulik1986@gmail.com">Litvinov Yaroslav</author>
  <maintainer email="yarulik1986@gmail.com">Litvinov Yaroslav</maintainer>
  
  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>engix_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <!--run_depend>multimaster_launch</run_depend-->
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
