<?xml version="1.0"?>
<package format="2">
  <name>dwa_planner_py</name>
  <version>0.0.1</version>
  <description>dwa planner python bindings</description>

  <maintainer email="kantengri3@gmail.com">aparfenov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <build_depend>grid_map</build_depend>

  <exec_depend>pybind11_catkin</exec_depend>
  <exec_depend>grid_map</exec_depend>

</package>
