<?xml version="1.0"?>
<package format="2">
  <name>gazebo_bridge_localization</name>
  <version>1.0.0</version>
  <description>Main localization package for autonomous mower</description>

  <maintainer email="kos1694@gmail.com">Konstantin Usenko</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>abstractnode</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>zed_wrapper</build_depend> -->
  <!-- <build_depend>ce30c_driver</build_depend> -->

  <!-- <build_depend>roscpp</build_depend>
  <build_depend>grid_map</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend> -->
  
</package>
