CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)
PROJECT(engix_localization)

# SET(CMAKE_BUILD_TYPE Release)
# set(CMAKE_BUILD_TYPE Debug)
# if(CMAKE_BUILD_TYPE STREQUAL "Debug")
#     ADD_COMPILE_OPTIONS(-std=c++14)
# else()
#     ADD_COMPILE_OPTIONS(-std=c++14 -O3)
# endif()

# FIND_PACKAGE(catkin REQUIRED COMPONENTS
#     roscpp
#     tf
#     sensor_msgs
#     pcl_ros
#     grid_map_core
#     grid_map_ros
#     grid_map_cv
#     grid_map_filters
#     grid_map_loader
#     grid_map_msgs
#     grid_map_octomap
#     grid_map_rviz_plugin
#     grid_map_visualization
# )

# find_package(Eigen3 REQUIRED)

###################################
## catkin specific configuration ##
###################################
# catkin_package(
# #  INCLUDE_DIRS include
# #  LIBRARIES realtime_occupancy_mapping
# #  CATKIN_DEPENDS roscpp
# #  DEPENDS system_lib
# )

###########
## Build ##
###########

# include_directories(
#     ${catkin_INCLUDE_DIRS}
# )

# add_executable(map_server
#     src/map_server.cpp
# )
# add_executable(label_server
#     src/label_server.cpp
# )
# target_link_libraries(map_server
#     ${catkin_LIBRARIES}
# )
# target_link_libraries(label_server
#     ${catkin_LIBRARIES}
# )
