<?xml version="1.0"?>
<package format="2">
  <name>ddrnet</name>
  <version>1.0.0</version>
  <description>ROS interface for the DDRNet</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
