<?xml version="1.0"?>
<package>
  <name>simulator_launch</name>
  <version>1.0.0</version>
  <description>Engix robot Simulator bringup</description>

  <author email="kos1694@gmail.com">Usenko Konstantin</author>
  <maintainer email="kos1694@gmail.com">Usenko Konstantin</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>engix_description</run_depend>

</package>
