<?xml version="1.0"?>
<package format="2">
    <name>engix_robot</name>
    <version>0.0.2</version>
    <description>The ros_odrive C++ driver package</description>
    <maintainer email="ioko@ioko.eu">Ioannis Kokkoris</maintainer>
    <license>MIT</license>
    <url type="website">http://www.ioko.eu/</url>
    <author email="ioko@ioko.eu">Ioannis Kokkoris</author>

    <build_depend>message_generation</build_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf</exec_depend>
    <export>

    </export>
</package>
