<?xml version="1.0"?>
<package>
  <name>engix_viz</name>
  <version>0.0.2</version>
  <description>Visualization configuration for Engix robot</description>

  <author email="yarulik1986@gmail.com">Litvinov Yaroslav</author>
  <maintainer email="yarulik1986@gmail.com">Litvinov Yaroslav</maintainer>
  
  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>engix_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
