<package format="2">
    <name>pkg1</name>
    <version>1.0.0</version>
    <description>
    pkg1
    </description>
    <url>http://wiki.ros.org/move_base_flex</url>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>mbf_abstract_nav</depend>
    <depend>mbf_costmap_core</depend>
    <depend>mbf_msgs</depend>
    <depend>mbf_utility</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>

    <!-- Required by the backward compatibility move_base relay -->
    <exec_depend>move_base</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
</package>
